Working on exercises.  Played around with all of them but really having issues comprehending : q quit git status

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
 
   <article id="container"></article>
+<br><br><br>
+  <article id="messages"></article>
+  <br><br><br>
+  <article id="emperorList"></article>
   
   <script src="script.js"></script>
 </body>
